# mini-webserver

./: .clang-format  .gitignore  Makefile  README.md  checkCleanUri.cpp  clang-format.txt  initServer.cpp  webServ
srcs/: CMakeLists.txt
srcs/AMethod/: AMethod.cpp  AMethod.hpp  GetMethod.hpp  Makefile  MethodDelete.cpp  MethodDelete.hpp  MethodGet.cpp  MethodGet.hpp  MethodHead.cpp  MethodHead.hpp  MethodPost.cpp  MethodPost.hpp  main.cpp
srcs/cgi/: cgi.cpp  cgi.hpp
srcs/kqueueTutorial/: main.cpp
srcs/networking/: ChangeList.cpp  ChangeList.hpp  Makefile_WebServerRun  Makefile_WebServerSample  UserData.cpp  UserData.hpp  WebServer.cpp  WebServer.hpp  dataSet.hpp  httpRequestParsing.cpp  initServer.cpp  main.cpp  main_WebServerSample.cpp  test  test.cpp  waitForClientConnection.cpp  webServerParseFileOrNull.cpp
srcs/networking/YoupiBanane/directory/: youpi.bad_extension  youpi.bla
srcs/networking/cgi-bin/: calculator.py  create.py  fileprint.py  fileupload.py  hello.py  index.py  print.py  test.cpp  test.html  test.py
srcs/networking/html/: GET.html  POST.html  calculator.html  create.html  fileUpload.html  fileprint.html  index.html  load.html  print.html  test.html
srcs/networking/html/cgi-bin/: calculator.py  create.py  fileprint.py  fileupload.py  hello.py  (+5 more)
srcs/parser/: HttpBlock.cpp  LocationBlock.cpp  LocationBlock.hpp  Makefile  ServerBlock.cpp  TreeTester  default.conf  main.cpp  parser.cpp  parser.hpp  simple.conf
srcs/util/: Colors.hpp  Error.cpp  Error.hpp  Makefile  MultiTree.cpp  MultiTree.hpp  MultiTreeNode.cpp  MultiTreeNode.hpp  test.cpp
(+65 files in other folders)
